--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,18 @@ p {
 body {
   min-height: 100%;
   font-family: "Barlow Semi Condensed", Arial, Helvetica, sans-serif;
-  font-size: clamp(1.4rem, 2vw, 1.8rem);
+  font-size: clamp(1.4rem, 2vw, 1.6rem);
   background: #ecf2f8;
   padding: 1.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .grid--container {
@@ -36,6 +45,17 @@ body {
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
   grid-auto-rows: auto;
+}
+
+@media only screen and (min-width: 850px) {
+  .grid--container {
+    -ms-grid-columns: (1fr)[4];
+        grid-template-columns: repeat(4, 1fr);
+    -ms-grid-rows: (1fr)[2];
+        grid-template-rows: repeat(2, 1fr);
+    width: clamp(1240px, 100vw, 1440px);
+    outline: solid red 2px;
+  }
 }
 
 .grid--container .card {
@@ -53,6 +73,12 @@ body {
   color: white;
 }
 
+@media only screen and (min-width: 850px) {
+  .grid--container .daniel {
+    grid-column: span 2;
+  }
+}
+
 .grid--container .jonathan {
   background: #48556a;
   color: white;
@@ -67,8 +93,23 @@ body {
   color: white;
 }
 
+@media only screen and (min-width: 850px) {
+  .grid--container .patrick {
+    grid-column: span 2;
+  }
+}
+
 .grid--container .kira {
   background: white;
+}
+
+@media only screen and (min-width: 850px) {
+  .grid--container .kira {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 1;
+    grid-column: 4 / 5;
+    grid-row: -3 / -1;
+  }
 }
 
 .grid--container .author--wrap {
