--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ p {
 body {
   min-height: 100%;
   font-family: "Barlow Semi Condensed", Arial, Helvetica, sans-serif;
-  font-size: clamp(1.4rem, 2vw, 1.6rem);
+  font-size: 1.3rem;
   background: #ecf2f8;
   padding: 1.5em;
   display: -webkit-box;
@@ -53,8 +53,8 @@ body {
         grid-template-columns: repeat(4, 1fr);
     -ms-grid-rows: (1fr)[2];
         grid-template-rows: repeat(2, 1fr);
-    width: clamp(1240px, 100vw, 1440px);
-    outline: solid red 2px;
+    width: 100%;
+    max-width: 1350px;
   }
 }
 
@@ -63,9 +63,14 @@ body {
   border-radius: 10px;
 }
 
+.grid--container .card__title {
+  font-size: clamp(2.1rem, 1.5vw, 2.4rem);
+}
+
 .grid--container .card__p {
-  line-height: 1.6;
+  line-height: 1.4;
   opacity: 70%;
+  font-size: clamp(1.4rem, 2vw, 1.6rem);
 }
 
 .grid--container .daniel {
@@ -86,6 +91,12 @@ body {
 
 .grid--container .jeanette {
   background: white;
+}
+
+@media only screen and (min-width: 850px) {
+  .grid--container .jeanette .card__title {
+    max-width: 17ch;
+  }
 }
 
 .grid--container .patrick {
@@ -134,6 +145,6 @@ body {
   border-radius: 999px;
   width: 30px;
   height: 30px;
-  margin-right: 1.5em;
+  margin-right: 1em;
 }
 /*# sourceMappingURL=styles.css.map */
