--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -32,7 +32,8 @@ p {
 body {
     min-height: 100%;
     font-family: $font-stack;
-    font-size: clamp(1.4rem, 2vw, 1.6rem);
+    font-size: 1.3rem;
+    // font-size: clamp(1.4rem, 2vw, 1.6rem);
     background: color(Light-Grayish-Blue);
     padding: 1.5em;
     display: flex;
@@ -49,21 +50,24 @@ body {
     @include desktopSize {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        width: clamp(1240px, 100vw, 1440px);
+        width: 100%;
+        max-width: 1350px;
         // max-height: 600px;
-        outline: solid red 2px;
+        // outline: solid red 2px;
     }
 
     .card {
         padding: 2em;
         border-radius: 10px;
 
-        &__h3 {
+        &__title {
+            font-size: clamp(2.1rem, 1.5vw, 2.4rem);
         }
 
         &__p {
-            line-height: 1.6;
+            line-height: 1.4;
             opacity: 70%;
+            font-size: clamp(1.4rem, 2vw, 1.6rem);
         }
     }
 
@@ -83,6 +87,12 @@ body {
 
     .jeanette {
         background: white;
+
+        .card__title {
+            @include desktopSize {
+                max-width: 17ch;
+            }
+        }
     }
 
     .patrick {
@@ -121,7 +131,7 @@ body {
             border-radius: 999px;
             width: 30px;
             height: 30px;
-            margin-right: 1.5em;
+            margin-right: 1em;
         }
     }
 }
