--- a/css/styles.css
+++ b/css/styles.css
@@ -1,150 +1,181 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap");
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  height: 100%;
-  font-size: 62.5%;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    height: 100%;
+    font-size: 62.5%;
 }
 
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-  margin: 0;
+    -webkit-box-sizing: inherit;
+    box-sizing: inherit;
+    margin: 0;
+}
+
+p {
+    margin-top: 1em;
 }
 
 h1,
 h2,
-h3,
-p {
-  margin-top: 1em;
+h3 {
+    margin-top: 0.5em;
 }
 
 body {
-  min-height: 100%;
-  font-family: "Barlow Semi Condensed", Arial, Helvetica, sans-serif;
-  font-size: 1.3rem;
-  background: #ecf2f8;
-  padding: 1.5em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    min-height: 100%;
+    font-family: "Barlow Semi Condensed", Arial, Helvetica, sans-serif;
+    font-size: 1.3rem;
+    background: #ecf2f8;
+    padding: 1.5em;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .grid--container {
-  display: -ms-grid;
-  display: grid;
-  grid-gap: 1.5em;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  grid-auto-rows: auto;
+    display: -ms-grid;
+    display: grid;
+    grid-gap: 1.5em;
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+    grid-auto-rows: auto;
 }
 
 @media only screen and (min-width: 850px) {
-  .grid--container {
-    -ms-grid-columns: (1fr)[4];
+    .grid--container {
+        -ms-grid-columns: (1fr) [4];
         grid-template-columns: repeat(4, 1fr);
-    -ms-grid-rows: (1fr)[2];
+        -ms-grid-rows: (1fr) [2];
         grid-template-rows: repeat(2, 1fr);
-    width: 100%;
-    max-width: 1350px;
-  }
+        width: 100%;
+        max-width: 1300px;
+    }
 }
 
 .grid--container .card {
-  padding: 2em;
-  border-radius: 10px;
+    padding: 2em;
+    border-radius: 10px;
 }
 
 .grid--container .card__title {
-  font-size: clamp(2.1rem, 1.5vw, 2.4rem);
+    font-size: clamp(2.1rem, 1.5vw, 2.4rem);
 }
 
 .grid--container .card__p {
-  line-height: 1.4;
-  opacity: 70%;
-  font-size: clamp(1.4rem, 2vw, 1.6rem);
+    line-height: 1.4;
+    opacity: 70%;
+    font-size: clamp(1.4rem, 2vw, 1.6rem);
 }
 
 .grid--container .daniel {
-  background: #7541c8;
-  color: white;
+    background: #7541c8;
+    position: relative;
+    color: white;
+}
+
+.grid--container .daniel .bg-img {
+    position: absolute;
+    right: 1em;
+    top: 0;
+    z-index: 0;
 }
 
 @media only screen and (min-width: 850px) {
-  .grid--container .daniel {
-    grid-column: span 2;
-  }
+    .grid--container .daniel .bg-img {
+        right: 5em;
+    }
+}
+
+.grid--container .daniel .card__title {
+    position: relative;
+}
+
+.grid--container .daniel .card__p {
+    position: relative;
+}
+
+@media only screen and (min-width: 850px) {
+    .grid--container .daniel {
+        grid-column: span 2;
+    }
 }
 
 .grid--container .jonathan {
-  background: #48556a;
-  color: white;
+    background: #48556a;
+    color: white;
 }
 
 .grid--container .jeanette {
-  background: white;
+    background: white;
 }
 
 @media only screen and (min-width: 850px) {
-  .grid--container .jeanette .card__title {
-    max-width: 17ch;
-  }
+    .grid--container .jeanette .card__p {
+        max-width: 30ch;
+    }
+    .grid--container .jeanette .card__title {
+        max-width: 17ch;
+    }
 }
 
 .grid--container .patrick {
-  background: #19212e;
-  color: white;
+    background: #19212e;
+    color: white;
 }
 
 @media only screen and (min-width: 850px) {
-  .grid--container .patrick {
-    grid-column: span 2;
-  }
+    .grid--container .patrick {
+        grid-column: span 2;
+    }
 }
 
 .grid--container .kira {
-  background: white;
+    background: white;
 }
 
 @media only screen and (min-width: 850px) {
-  .grid--container .kira {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 1;
-    grid-column: 4 / 5;
-    grid-row: -3 / -1;
-  }
+    .grid--container .kira {
+        -ms-grid-column: 4;
+        -ms-grid-column-span: 1;
+        grid-column: 4 / 5;
+        grid-row: -3 / -1;
+    }
+    .grid--container .kira .card__p {
+        max-width: 30ch;
+    }
 }
 
 .grid--container .author--wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .grid--container .author--wrap .name {
-  margin: 0;
+    margin: 0;
 }
 
 .grid--container .author--wrap .verified {
-  opacity: 50%;
-  font-size: 1.4rem;
+    opacity: 50%;
+    font-size: 1.4rem;
 }
 
 .grid--container .author--wrap img {
-  border-radius: 999px;
-  width: 30px;
-  height: 30px;
-  margin-right: 1em;
+    border-radius: 999px;
+    width: 30px;
+    height: 30px;
+    margin-right: 1em;
 }
 /*# sourceMappingURL=styles.css.map */
