--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,15 +14,15 @@ html {
     margin: 0;
 }
 
-p {
-    margin-top: 1em;
-}
+// p {
+//     margin-top: 1em;
+// }
 
-h1,
-h2,
-h3 {
-    margin-top: 0.5em;
-}
+// h1,
+// h2,
+// h3 {
+//     margin-top: 0.5em;
+// }
 
 // h1,
 // h2,
@@ -37,6 +37,7 @@ body {
     font-family: $font-stack;
     font-size: 1.3rem;
     // font-size: clamp(1.4rem, 2vw, 1.6rem);
+    font-size: 1.3rem;
     background: color(Light-Grayish-Blue);
     padding: 1.5em;
     display: flex;
@@ -54,7 +55,8 @@ body {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(2, 1fr);
         width: 100%;
-        max-width: 1300px;
+        max-width: 1050px;
+
         // max-height: 600px;
         // outline: solid red 2px;
     }
@@ -64,13 +66,17 @@ body {
         border-radius: 10px;
 
         &__title {
-            font-size: clamp(2.1rem, 1.5vw, 2.4rem);
+            margin-top: 1em;
+            font-weight: 600;
+            // font-size: clamp(2.1rem, 1.5vw, 2.4rem);
         }
 
         &__p {
-            line-height: 1.4;
+            line-height: 1.6;
             opacity: 70%;
-            font-size: clamp(1.4rem, 2vw, 1.6rem);
+            margin-top: 1.5em;
+
+            // font-size: clamp(1.4rem, 2vw, 1.6rem);
         }
     }
 
@@ -146,9 +152,9 @@ body {
             grid-column: 4 / 5;
             grid-row: -3 / -1;
 
-            .card__p {
-                max-width: 30ch;
-            }
+            // .card__p {
+            //     max-width: 30ch;
+            // }
         }
     }
 
