--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,10 @@ body {
   .grid--container {
     -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
+    -ms-grid-rows: auto auto;
+        grid-template-rows: auto auto;
     width: 100%;
-    max-width: 1050px;
+    max-width: 1150px;
   }
 }
 
